--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,145 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$ProtectionSystem-Web-primary: mat-palette($mat-indigo);
+$ProtectionSystem-Web-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$ProtectionSystem-Web-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$ProtectionSystem-Web-theme: mat-light-theme($ProtectionSystem-Web-primary, $ProtectionSystem-Web-accent, $ProtectionSystem-Web-warn);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($ProtectionSystem-Web-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+@import url(assets/css/bootstrap.min.css);
+@import url(assets/css/fonts.css);
+@import url(assets/css/all.css);
+@import url(assets/css/animate.css);
+
+/* colors system */
+$colors: (color-1: #7d302a,
+  color-2: #b69265,
+  color-3: #2E2118,
+  gray-0: #ffffff,
+  gray-5: #f2f2f2,
+  gray-10: #e6e6e6,
+  gray-20: #cccccc,
+  gray-30: #b3b3b3,
+  gray-40: #999999,
+  gray-50: #808080,
+  gray-60: #666666,
+  gray-70: #4d4d4d,
+  gray-80: #333333,
+  gray-90: #1a1a1a);
+
+/* backgrounds ============================== */
+@each $name,
+$color in $colors {
+  .bg_#{$name} {
+    background-color: $color !important;
+  }
+}
+
+/* text colors ============================== */
+@each $name,
+$color in $colors {
+  .text_#{$name} {
+    color: $color !important;
+  }
+}
+
+/* borders ============================== */
+@each $name,
+$color in $colors {
+  .border_#{$name} {
+    border-color: $color !important;
+  }
+}
+
+/* HTML tags ============================== */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  height: 100%;
+  font-family: Droid, Roboto;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: right;
+}
+
+/* form  ============================== */
+input[type=text].form-control,
+input[type=email].form-control,
+input[type=password].form-control {
+  border-color: map-get($colors, color-2);
+  border-radius: 19px;
+  padding: 0px 19px;
+  font-size: inherit;
+  height: 38px;
+}
+
+.form-control:focus {
+  box-shadow: 0 0 0 0.2rem rgba(map-get($colors, color-1), 0.2);
+}
+
+/* buttons ============================== */
+.btn {
+  line-height: 38px;
+  border-width: 0px;
+  border-radius: 19px;
+  padding: 0px 14px;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn_color-1 {
+  background-color: map-get($colors, color-1);
+  color: map-get($colors, gray-0);
+}
+
+.btn_color-1:hover,
+.btn_color-1:focus {
+  background-color: rgba(map-get($colors, color-1), 0.3);
+  color: map-get($colors, color-1);
+}
+
+/* section title ============================== */
+.section_title {
+  line-height: 43px;
+
+  h2 {
+    border-bottom: 5px solid map-get($colors, color-1);
+  }
+}
+
+
+/* breakpoint ============================== */
+/* medium devices (tablets, 576px and up) */
+@media (min-width: 576px) {}
+
+/* medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {}
+
+/* large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
